Resolve overflow in projects description container for mobile

--- a/src/components/LandingPage/Landing.module.css
+++ b/src/components/LandingPage/Landing.module.css
@@ -55,12 +55,20 @@
 }
 
 .right {
-  width: 100%;
-  text-align: center;
   display: flex;
   padding: 30px;
   justify-content: center;
   align-items: center;
+}
+
+.text_container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.right p {
+  text-align: left;
+  font-size: 20px;
 }
 
 
@@ -84,7 +92,7 @@ and (max-device-width : 736px) {
     padding: 0;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
     overflow: hidden;
   }
 
@@ -94,6 +102,7 @@ and (max-device-width : 736px) {
     justify-content: center;
     padding: 10px;
   }
+
 }
 
 @media screen 
