--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,8 +9,7 @@
     z-index: 1;
     color: var(--light-font);
     font-size: 24px;
-    /* border-bottom: 0.5px solid var(--light-font); */
-    box-shadow: 0.8px 0.8px 0.8px 0.8px rgba(0,0,0,0.8);
+    box-shadow: 0 0 8px 0 rgba(0,0,0,0.8);
     transition: var(--transition-delay);
 }
 
@@ -19,7 +18,7 @@
     display: flex;
     list-style-type: none;
     align-items: center;
-    
+    justify-content: center;
 }
 
 .nav_container a {
