--- a/src/components/Projects/Project.module.css
+++ b/src/components/Projects/Project.module.css
@@ -6,19 +6,24 @@
 }
 
 .description {
-    width: 80%;
+    width: 90%;
     height: 100%;
     margin: 0 auto;
     padding: 15px;
+    font-size: 24px;
 }
 
 .description form {
     padding: 10px;
 }
 
+.description option, select {
+    font-size: 20px;
+}
+
 .carousel_container {
-    width: 600px;
-    height: 365px;
+    width: 80%;
+    /* height: 365px; */
     padding: 5px;
     margin: 20px auto 20px auto;
     box-shadow: 10px 10px 10px 2px rgba(0,0,0,0.8);
@@ -31,6 +36,7 @@
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    font-size: 24px;
 }
 
 .technology {
@@ -40,12 +46,14 @@
 }
 
 .technology li {
-    font-size: 14px;
+    font-size: 24px;
+    margin-left: 3px;
 }
 
 .technology a {
     color: black;
-    padding-left: 5px;
+    margin-left: 5px;
+    font-size: 28px;
 }
 
 .dark .technology a {
@@ -99,6 +107,14 @@ and (max-device-width : 736px) {
     .project_container {
         grid-template-rows: 1fr 1fr;
         height: 100vh;
+        width: 100%;
+        margin: 0 auto;
+        overflow: hidden;
+        box-sizing: border-box;
+    }
+
+    .project_container select {
+        padding: 0;
     }
 
     .description {
@@ -106,13 +122,34 @@ and (max-device-width : 736px) {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 0 auto;
+        font-size: 18px;
+        padding: 0;
         width: 100%;
     }
 
+    .description p {
+        font-size: 18px;
+    }
+
+    .description li {
+        font-size: 18px;
+    }
+
+    .description a {
+        font-size: 20px;
+    }
+
+    .technology ul {
+        font-size: 14px;
+    }
+
+    .technology li {
+        font-size: 14px;
+    }
+
     .carousel_container {
-        width: 375px;
-        height: 285px;
+        width: 350px;
+        height: 270px;
         margin: 0 auto;
     }
 
